--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["takagiy <takagiy.4dev@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+encoding_rs = "0.8.26"
+encoding_rs_io = "0.1.7"
 walkdir = "2.3.1"
