--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ authors = ["takagiy <takagiy.4dev@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+byteorder = "1.3.4"
 encoding_rs = "0.8.26"
 encoding_rs_io = "0.1.7"
+getset = "0.1.1"
 hound = "3.4.0"
 walkdir = "2.3.1"
